--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item text-center rounded overflow-hidden">
                             <div class="rounded-circle overflow-hidden m-4">
-                                <img class="img-fluid" src="img/file.jpg" alt="Team Member">
+                                <img class="img-fluid" src="img/file-1.jpg" alt="Team Member">
                             </div>
                             <h5 class="mb-0">Willys Julianto</h5>
                             <small>Professional Chef</small>
@@ -559,7 +559,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item text-center rounded overflow-hidden">
                             <div class="rounded-circle overflow-hidden m-4">
-                                <img class="img-fluid" src="img/file.jpg" alt="Team Member">
+                                <img class="img-fluid" src="img/file-1.jpg" alt="Team Member">
                             </div>
                             <h5 class="mb-0">Willys Julianto</h5>
                             <small>Professional Chef</small>
