--- a/index.html
+++ b/index.html
@@ -762,11 +762,11 @@
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Patner</h4>
                         <div class="d-flex flex-wrap gap-2 w-100 col-lg-6 col-md-12">
-                            <img class="img-fluid w-25 h-25 rounded" src="img/patner-1.png" alt="Partner 1">
-                            <img class="img-fluid w-25 h-25 rounded" src="img/patner-2.jpg" alt="Partner 2">
-                            <img class="img-fluid w-25 h-25 rounded" src="img/patner-3.png" alt="Partner 3">
-                            <img class="img-fluid w-25 h-25 rounded" src="img/patner-4.png" alt="Partner 4">
-                            <img class="img-fluid w-25 h-25 rounded" src="img/patner-5.png" alt="Partner 5">
+                            <img class="img-fluid w-25 h-25 rounded img-square" src="img/patner-1.png" alt="Partner 1">
+                            <img class="img-fluid w-25 h-25 rounded img-square" src="img/patner-2.jpg" alt="Partner 2">
+                            <img class="img-fluid w-25 h-25 rounded img-square" src="img/patner-3.png" alt="Partner 3">
+                            <img class="img-fluid w-25 h-25 rounded img-square" src="img/patner-4.png" alt="Partner 4">
+                            <img class="img-fluid w-25 h-25 rounded img-square" src="img/patner-5.png" alt="Partner 5">
                         </div>
                     </div> 
                     <div class="col-lg-3 col-md-6">
@@ -791,13 +791,13 @@
                     <div class="col-lg-3 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Testi</h4>
                         <div class="d-flex flex-wrap gap-2 w-100 col-lg-6 col-md-12">
-                            <img class="img-fluid w-25 h-25 rounded" src="img/testi-1.jpg" alt="Testi 1">
-                            <img class="img-fluid w-25 h-25 rounded" src="img/testi-2.jpg" alt="Testi 2">
-                            <img class="img-fluid w-25 h-25 rounded" src="img/testi-3.jpg" alt="Testi 3">
-                            <img class="img-fluid w-25 h-25 rounded" src="img/testi-4.jpg" alt="Testi 4">
-                            <img class="img-fluid w-25 h-25 rounded" src="img/testi-5.jpg" alt="Testi 5">
-                            <img class="img-fluid w-25 h-25 rounded" src="img/testi-6.jpg" alt="Testi 6">
-                            <img class="img-fluid w-25 h-25 rounded" src="img/testi-7.jpg" alt="Testi 7">
+                            <img class="img-fluid w-25 h-25 rounded img-square" src="img/testi-1.jpg" alt="Testi 1">
+                            <img class="img-fluid w-25 h-25 rounded img-square" src="img/testi-2.jpg" alt="Testi 2">
+                            <img class="img-fluid w-25 h-25 rounded img-square" src="img/testi-3.jpg" alt="Testi 3">
+                            <img class="img-fluid w-25 h-25 rounded img-square" src="img/testi-4.jpg" alt="Testi 4">
+                            <img class="img-fluid w-25 h-25 rounded img-square" src="img/testi-5.jpg" alt="Testi 5">
+                            <img class="img-fluid w-25 h-25 rounded img-square" src="img/testi-6.jpg" alt="Testi 6">
+                            <img class="img-fluid w-25 h-25 rounded img-square" src="img/testi-7.jpg" alt="Testi 7">
                         </div>
                     </div>                    
                 </div>
