--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                 </div>
                 <div class="col-md-6 bg-dark d-flex align-items-center">
                     <div class="p-5 wow fadeInUp" data-wow-delay="0.2s">
-                        <h5 class="section-title ff-secondary text-start text-primary fw-normal">Reservation</h5>
+                        <h5 class="section-title ff-secondary text-start text-primary fw-normal">Booking Class</h5>
                         <h1 class="text-white mb-4">Ambil Kelas Konsultan</h1>
                         <form id="contactForm">
                             <div class="row g-3">
