--- a/index.html
+++ b/index.html
@@ -569,11 +569,11 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="form-floating date" id="date3" data-target-input="nearest">
-                                        <input type="text" class="form-control datetimepicker-input" id="datetime" placeholder="Date & Time" data-target="#date3" data-toggle="datetimepicker" required />
+                                    <div class="form-floating">
+                                        <input type="date" class="form-control" id="datetime" placeholder="Tanggal" required />
                                         <label for="datetime">Tanggal</label>
                                     </div>
-                                </div>
+                                </div>  
                                 <div class="col-md-6">
                                     <div class="form-floating">
                                         <input type="number" class="form-control" id="number" placeholder="Jumlah Peserta" required>
