--- a/index.html
+++ b/index.html
@@ -534,6 +534,21 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="team-item text-center rounded overflow-hidden">
+                            <div class="rounded-circle overflow-hidden m-4">
+                                <img class="img-fluid" src="img/herman.png" alt="Team Member">
+                            </div>
+                            <h5 class="mb-0">Herman Rupawan</h5>
+                            <small>Koki Profesional</small>
+                            <a href="#" class="btn btn-dark mt-2 buyStandardClassBtn" data-classname="Cooking Class">Ambil Service</a>
+                            <div class="d-flex justify-content-center mt-3">
+                                <a class="btn btn-square btn-primary d-flex mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-square btn-primary d-flex mx-1" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-square btn-primary d-flex mx-1" href="#"><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
