--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; hakcipta <a class="border-bottom" href="#">DTS F&B Konsultan</a>, Layanan Koki Profesional
+                            &copy; hakcipta <a class="border-bottom" href="#">Tribuwono hehe</a>, Layanan Koki Profesional
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
